src/test/ui/derives/derives-span-PartialOrd-struct.stderr
error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd-struct.rs:8:5
   |
LL |     x: Error
   |     ^^^^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
   = note: required by `std::cmp::PartialOrd::partial_cmp`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd-struct.rs:8:5
   |
LL |     x: Error
   |     ^^^^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
   = note: required by `std::cmp::PartialOrd::partial_cmp`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd-struct.rs:8:5
   |
LL |     x: Error
   |     ^^^^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
   = note: required by `std::cmp::PartialOrd::partial_cmp`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd-struct.rs:8:5
   |
LL |     x: Error
   |     ^^^^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
   = note: required by `std::cmp::PartialOrd::partial_cmp`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd-struct.rs:8:5
   |
LL |     x: Error
   |     ^^^^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
   = note: required by `std::cmp::PartialOrd::partial_cmp`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
